# Final-Practice-Compiler

unam.fi.compilers.g5.03/Compiler_Final/: pyproject.toml
unam.fi.compilers.g5.03/Compiler_Final/src/Compiler/: assembler.py  ast_builder.py  grammar.lark  interface.py  semantic_analyzer.py
unam.fi.compilers.g5.03/Compiler_Final/src/tests/: testsCases.txt
