[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Compiler"
version = "0.1.0"
description = "Una implementacion de un Compilador para un lenguaje simple"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "lark"
    "llvmlite"
    "tkinder"
]

[tool.setuptools.packages.find]
where = ["src"]]